# MDEndpoints

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
deployments/mdendpoints/: kustomization.yaml  mdendpoints-cj.yaml  mdendpoints-cm.yaml  mdendpoints-d.yaml  mdendpoints-j.yaml  mdendpoints-s.yaml
docker/: mdendpoints.Dockerfile
scripts/: build-and-push-image.sh  deploy.sh
scripts/db/: create_tables.sh  create_tables.sql
services/get_data/src/: api.py  config.py  database.py  main.py  process_data.py  settings.env
