[project]
name = "epms-crafted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pyodbc>=5.2.0",
    "requests>=2.32.3",
]

[tool.uv.workspace]
members = [
    "services",
]
